[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradio_utils"
version = "1.0"
authors = [{name="Jarod Mica"}]
description = "A package containing functions that I use to make building gradio webui's quicker"
requires-python = ">=3.8"
dependencies = ["gradio>=4.0.0,<4.42.1"]

[project.urls]
Homepage = "https://github.com/JarodMica/gradio_utils"